# OgreProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  IPickupEffect.h  IPickupObject.h  InputManager.cpp  InputManager.h  MovingObject.cpp  MovingObject.h  MyEngine.cpp  MyEngine.h  ParticleEffect.cpp  ParticleEffect.h  PickupManager.cpp  PickupManager.h  PickupObject.cpp  PickupObject.h  PlayerAvatar.cpp  PlayerAvatar.h  RoamingCamera.cpp  RoamingCamera.h  SoundEffect.cpp  SoundEffect.h  SoundManager.cpp  SoundManager.h  SoundObject.cpp  SoundObject.h  SwirlEffect.cpp  SwirlEffect.h  conanfile.py  main.cpp  plugins.cfg.in  resources.cfg.in
LabFiles/Materials/: MySinbadMaterial.material
LabFiles/Models/: Material.001.material  RedMonkey.scene  Suzanne.mesh
ParticleSystems/: MyParticleSystem.particle
sounds/: FFmpegOpenAlSound.cpp  FFmpegOpenAlSound.h  HelperFunctions.cpp  HelperFunctions.h
